<resources>
    <string name="app_name">Mamu</string>
    <string name="email">Email</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_in_less_than_a_minute">Sign up in less than a minute</string>
    <string name="username">Enter Name</string>
    <string name="already_a_user">Already a user?</string>
    <string name="create_a_free_private_secure_account_in_3_easy_steps" translatable="false">Create a free, private, secure account in 3 easy steps</string>
    <string name="sign_up">Sign Up</string>
    <string name="unique_name_label">Unique Name</string>
    <string name="mobile_label">Mobile Number</string>
    <string name="sex_label">Sex</string>
    <string name="bday_label">Birthday</string>
    <string name="bday">Enter Birthday</string>
    <string name="title_activity_challenger_mamu" translatable="false">ChallengerMamuActivity</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="pull_to_refresh" translatable="false">No Products. Pull To Refresh</string>
    <string name="demo_question" translatable="false">This is a demo question. This is a demo question. This is a demo question. This is a demo question.</string>
    <string name="demo_answer" translatable="false">This is a demo answer. This is a demo answer. This is a demo answer. This is a demo answer. This is a demo answer. This is a demo answer</string>
    <string name="expert_mamu">Expert Mamu</string>
    <string name="my_question_mamu_answers">My Question Mamu Answers</string>
    <string name="video_challenge">Video Challenge</string>
    <string name="challenge_mamu">Challenge Mamu</string>
    <string name="campus_hero_cafe" translatable="false">The Campus Hero Cafe<br/>email: <b>chllengermamu@gmail.com</b></string>
    <string name="first_button_tooltip_text">Want to talk about adolescence and sex, reproduction health? Openly discuss with our expert mamu.</string>
    <string name="second_button_tooltip_text">Chat with mamu, Tell him anything</string>
    <string name="third_button_tooltip_text">Find your answer via our videos, update your own videos</string>
    <string name="fourth_buton_tooltip_text">Is your knowledge about sex and reproduction health correct? Challenge Mamu</string>
    <string name="sixth_button_tooltip_text">Talk with mamu on our hotline number</string>
    <string name="mail">Mail</string>
    <string name="dial">Dial</string>
    <string name="hotline_number" translatable="false">123456</string>
    <string name="hotline">Hotline</string>
    <string name="contact_us">Contact Us</string>
    <string name="challenger_mamu">Challenger Mamu</string>
    <string name="my_videos">My videos</string>
    <string name="all_videos">All videos</string>
    <string name="facebook_group_link" translatable="false">https://www.facebook.com/BraveMenCampaign</string>
    <string name="youtube_chanel_link" translatable="false">https://www.youtube.com/cmms</string>
    <string name="sign_in">Sign In</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="click_here_to_enter">Click Here to Enter</string>
    <string name="bangla_string" translatable="false">bn</string>
    <string name="english_string" translatable="false">en</string>
    <string name="english">English</string>
    <string name="bangla">Bangla</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="loading">Loading</string>
    <string name="select_topic">Select Topic</string>
    <string name="others_question">Others\' Question</string>
    <string name="my_questions">My Questions</string>
    <string name="others_challenges">Others Challenges</string>
    <string name="my_challenges">Own Challenges</string>
    <string name="all_topics">All Topics</string>
    <string name="expert_question_title">Expert Questions</string>
    <string name="challenge_answer_title">Answer to the challenge</string>
    <string name="no_answer_text">No answer is given yet</string>
    <string name="question_answer_title">Answer of expert mamu</string>
    <string name="compose_question_here">Compose Question Here</string>
    <string name="add_a_challenge">Add a Challenge</string>
    <string name="challenge_add_success_message">Challenge Successfully Added</string>
    <string name="add_a_question">Add a question</string>

    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="prompt_username">What\'s your nickname?</string>
    <string name="action_sign_in">Join</string>
    <string name="action_sign_in_short">Join</string>

    <string name="error_field_required">This field is required</string>
    <string name="action_refresh">Refresh</string>
    <string name="send">Send</string>
    <string name="log_out">Log out</string>
    <string name="user">User</string>
    <string name="faq">FAQ</string>

</resources>
