<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl_home_page_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_mamu_png" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_unique_name"
            style="@style/NormalTextViewStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unique_name_label" />

        <EditText
            android:id="@+id/et_user_name"
            style="@style/AccountPagEditTextStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_mobile"
            style="@style/NormalTextViewStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_label" />

        <EditText
            android:id="@+id/et_mobile"
            style="@style/AccountPagEditTextStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="11" />

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edge_red_background"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            style="@style/AccountPagEditTextStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password?"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/tv_sign_up_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:text="@string/sign_up_in_less_than_a_minute"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_mamu_png_new_new" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginTop="40dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_settings_black_24dp"
                android:drawableStart="@drawable/ic_settings_black_24dp"
                android:text="@string/action_settings"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/faq"
                android:drawableLeft="@drawable/ic_faq"
                android:drawableStart="@drawable/ic_faq"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@android:color/darker_gray" />

        </LinearLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>