<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dl_home_page_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_homepage_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/challenger_mamu"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp"
                app:layout_heightPercent="30%" />

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/prl_root_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_homepage_header"
                android:layout_centerHorizontal="true"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="90%">

                <Button
                    android:id="@+id/btn_expert_mamu_hmpgb1"
                    style="@style/HomePageButtonsStyle"
                    android:text="@string/expert_mamu"
                    app:layout_heightPercent="50%"
                    app:layout_widthPercent="50%" />

                <Button
                    android:id="@+id/btn_normal_mamu_hmpgb2"
                    style="@style/HomePageButtonsStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/my_question_mamu_answers"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_heightPercent="50%"
                    app:layout_widthPercent="50%" />

                <Button
                    android:id="@+id/btn_video_challenge_hmpgb3"
                    style="@style/HomePageButtonsStyle"
                    android:layout_alignParentBottom="true"
                    android:text="@string/video_challenge"
                    app:layout_heightPercent="50%"
                    app:layout_widthPercent="50%" />

                <Button
                    android:id="@+id/challenge_mamau_hmpgb4"
                    style="@style/HomePageButtonsStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/challenge_mamu"
                    app:layout_heightPercent="50%"
                    app:layout_widthPercent="50%" />
            </android.support.percent.PercentRelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                app:layout_heightPercent="10%">

                <Button
                    android:id="@+id/btn_contact_us_hmpgb5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/contact_us" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/btn_hotline_hmpgb6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:drawablePadding="0dp"
                    android:drawableRight="@android:drawable/sym_action_call"
                    android:text="@string/hotline" />

            </LinearLayout>

        </android.support.percent.PercentRelativeLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mamu_png_new_new" />

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_mamu_png_new_new" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginTop="40dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/faq"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_faq"
                android:drawableLeft="@drawable/ic_faq"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/action_settings"
                android:drawableLeft="@drawable/ic_settings_black_24dp"
                android:drawableStart="@drawable/ic_settings_black_24dp"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/log_out"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
                android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@android:color/darker_gray" />

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>